...
                    ),
                    child: TextField(
                      key: const Key('aspiration_search_bar'),
                      controller: controller,
                      cursorColor: Colors.grey.shade800,
                      decoration: InputDecoration(
                        hintText: 'Cari pengirim atau judul...',
                        hintStyle: TextStyle(color: Colors.grey[500]),
                        border: InputBorder.none,
                        isDense: true,
                        contentPadding: EdgeInsets.zero,
                      ),
                      style: TextStyle(color: Colors.grey[800]),
...
